# brilliance-common

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
src/: default_blocks.rs  default_blocks.yml  lib.rs
src/blocks/: block_type.rs  chunk_shape_info.rs  mod.rs  voxel_visibility.rs
src/chunks/: chunk_data.rs  rotation.rs
src/commands/: complitions.rs
src/plugin_api/: mod.rs  worlds_manager.rs
src/plugin_api/events/: generage_chunk.rs  generage_world_macro.rs  mod.rs  plugin_load.rs  plugin_unload.rs
src/utils/: colors.rs  compressable.rs  mod.rs
src/utils/block_mesh/: greedy.rs  simple.rs
src/utils/debug/: format_grouped_lines.rs  info.rs  lock.rs  mod.rs  runtime_storage.rs
src/utils/events/: event_broadcast.rs  event_channel.rs  mod.rs
src/world_generator/: default.rs  traits.rs
src/worlds_storage/: fake_storage.rs  mod.rs  sqlite_storage.rs  taits.rs
