[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
default = ["full", "wasm-plugin"]
full = [
  "rusqlite",
  "flume",
  "parking_lot",
  "zip",
  "zstd",
  "bracket-lib",
  "bracket-noise",
  "bracket-random",
  "rhai",
  "spiral",
]
wasm-plugin = ["dep:brilliance-macros", "dep:extism-pdk"]

[workspace]
members = ["macros"]

[dependencies]
log = { version = "0.4.22" }
num = "0.4"
rand = "0.8.5"
regex = "1.10.6"
lazy_static = "1.4.0"
indexmap = "2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-inline-default = "0.2"
serde_yaml = "0.9"
strum = "0.26"
strum_macros = "0.26"
downcast-rs = "1.2.1"
typetag = "0.2.16"
ahash = "0.8.11"
bincode = "1.3.2"
miniz_oxide = "0.8.0"
# https://github.com/bonsairobo/block-mesh-rs/blob/main/Cargo.toml
ilattice = "0.4.0"
ndshape = "0.3.0"
ndcopy = "0.3.0"
tempfile = "3"

# Optional — не нужны в wasm
flume = { version = "0.11.0", optional = true }
parking_lot = { version = "0.12.3", optional = true }
# Scripts
rhai = { version = "1.19.0", features = ["internals", "serde"], optional = true }
rusqlite = { version = "0.35.0", features = ["bundled", "blob"], optional = true }
zip = { version = "7.1", optional = true }
zstd = { version = "0.13", optional = true }
# Noise world gen
bracket-lib = { version = "0.8.7", optional = true }
bracket-noise = { version = "0.8.7", optional = true }
bracket-random = { version = "0.8.7", optional = true }
# For spiral iteration
spiral = { version = "0.2", optional = true }

# Plugins
extism-pdk = { version = "1.4", optional = true }
brilliance-macros = { path = "./macros", optional = true }
